@@ -1,3 +1,14 @@
+2006-12-08  Michael Olson  <mwolson@gnu.org>
+
+	* erc.el: Re-evaluate contributions from a contributor, and found
+	them under 15 lines of non-obvious code, so it is safe to remove
+	the copyright notice.
+	(erc-modules): Remove list module.
+
+	* erc-list.el: Remove, since a contributor who has not completed
+	their assignment has contributed significantly more than 15 lines
+	of code to this file.
+
 2006-11-28  Juanma Barranquero  <lekktu@gmail.com>
 
 	* erc.el (erc-cmd-BANLIST, erc-cmd-MASSUNBAN): Simplify.
